fixed spacing in columns

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,8 @@ ul {
   border-bottom:1px;
   float:left;
   display:inline;
+      margin-top: 10px;
+    margin-bottom: 10px;
     
 }
 
